[tool.poetry]
name = "net2cog"
version = "0.3.0a0"
description = "NetCDF to COG Conversion Service"
authors = ["podaac <podaac@jpl.nasa.gov>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/podaac/net2cog"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
exclude = ['contrib', 'docs', 'tests']
packages = [
    { include = "net2cog" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
boto3 = "^1.28.3"
requests = "^2.31.0"
netcdf4 = "^1.6.4"
xarray = "^2024.6.0"
rio-cogeo = "^5.3.3"
rasterio = "^1.3.8"
rioxarray = "^0.17.0"
numpy = "^2.0.1"
harmony-service-lib = { version = "^1.0.22", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^6.0.0"
pytest-cov = "^4.1.0"
pylint = "^2.17.4"
sphinx = "^7.0.1"

[tool.poetry.extras]
harmony = ["harmony-service-lib"]

[tool.poetry.scripts]
netcdf_harmony = 'net2cog.netcdf_converter.netcdf_convert_harmony:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

